--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -16,6 +16,7 @@ body {
     z-index: 1000;
     background-color: rgba(255,255,255,0.9);
     padding: 10px;
+    font-weight: bold;
     font-size: 20px;
     color: #bf2626;
     border-radius: 5px;
